--- a/testing.ipynb
+++ b/testing.ipynb
@@ -12,77 +12,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'zyaaax'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to interrupt the Kernel. \n",
+      "No debugger available, can not send 'disconnect'. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "class Solution:\n",
-    "    def minWindow(self, s: str, t: str) -> str:\n",
-    "        if len(s) < len(t):\n",
-    "            return \"\"\n",
-    "        t_set = set(t)\n",
-    "        t_map,s_map = {}, {}\n",
-    "        res = []\n",
-    "        ans = s\n",
-    "        for c in t:\n",
-    "            t_map[c] = 1 + t_map.get(c,0)\n",
-    "        r=0\n",
-    "        while r < len(s):\n",
-    "            if len(t_map) == 0:\n",
-    "                if len(res) < len(ans):\n",
-    "                    ans = \"\".join(res)\n",
-    "                \n",
-    "                pop_val = res.pop(0)\n",
-    "                s_map[pop_val] -= 1\n",
-    "                if s_map[pop_val] == 0 and pop_val in t_set:\n",
-    "                    t_map[pop_val] = 1\n",
-    "                    \n",
-    "                while len(res) > 0 and res[0] not in t_set:\n",
-    "                    pop_val = res.pop(0)\n",
-    "                    s_map[pop_val] -= 1\n",
-    "                continue   \n",
-    "                \n",
-    "            char = s[r]\n",
-    "            if t_map.get(char,None) != None:\n",
-    "                res.append(char)\n",
-    "                r += 1\n",
-    "                s_map[char] = 1 + s_map.get(char,0)\n",
-    "                t_map[char] -= 1\n",
-    "                if t_map[char] == 0: \n",
-    "                    del t_map[char]\n",
-    "                \n",
-    "            elif len(res)>0:\n",
-    "                s_map[char] = 1 + s_map.get(char,0)\n",
-    "                res.append(char)\n",
-    "                r += 1\n",
+    "from collections import deque\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "# Function to insert nodes in level order\n",
+    "def insertLevelOrder(arr, i, n):\n",
+    "    root = None\n",
+    "    # Base case for recursion\n",
+    "    if i < n:\n",
+    "        root = TreeNode(arr[i]) if arr[i] != None else None\n",
+    "        if root == None:\n",
+    "            return root\n",
+    "        # insert left child\n",
+    "        root.left = insertLevelOrder(arr, 2 * i + 1, n)\n",
+    "        # insert right child\n",
+    "        root.right = insertLevelOrder(arr, 2 * i + 2, n)\n",
+    "    return root\n",
+    "\n",
+    "\n",
+    "class Codec:\n",
+    "\n",
+    "    def serialize(self, root):\n",
+    "        \"\"\"Encodes a tree to a single string.\n",
+    "        \n",
+    "        :type root: TreeNode\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        output = []\n",
+    "        q = deque()\n",
+    "        q.append(root)\n",
+    "        while q:\n",
+    "            q_len = len(q)\n",
+    "            for i in range(q_len):\n",
+    "                node = q.popleft()\n",
+    "                if node != None:\n",
+    "                    output.append(str(node.val))\n",
+    "                else:\n",
+    "                    output.append(str(node))\n",
+    "                q.append(node.left if node else None)\n",
+    "                q.append(node.right if node else None)\n",
+    "        s = \",\".join(output)\n",
+    "        print(s)\n",
+    "        return s\n",
+    "        \n",
+    "    def buildTree(self, nodes, idx, length):\n",
+    "        root = None\n",
+    "        \n",
+    "        if idx < length:\n",
+    "            if nodes[idx] == \"None\":\n",
+    "                root = None\n",
     "            else:\n",
-    "                r += 1\n",
-    "        if len(res) < len(ans):\n",
-    "            ans = \"\".join(res)\n",
-    "        return ans\n",
-    "                \n",
+    "                root = TreeNode(int(nodes[idx]))\n",
     "            \n",
-    "Solution().minWindow(\"zyaaaxyxaz\",\"xyz\")"
+    "            if root == None:\n",
+    "                return root\n",
+    "            \n",
+    "            root.left = self.buildTree(nodes,2*idx +1, length)\n",
+    "            root.right = self.buildTree(nodes, 2*idx +2, length)\n",
+    "        \n",
+    "        return root\n",
+    "    \n",
+    "    def deserialize(self, data):\n",
+    "        \"\"\"Decodes your encoded data to tree.\n",
+    "        \n",
+    "        :type data: str\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        nodes = data.split(\",\")\n",
+    "        return self.buildTree(nodes, 0, len(nodes))\n",
+    "        \n",
+    "null = None\n",
+    "arr = [1,2,3,null,null,4,5]\n",
+    "root = insertLevelOrder(arr, 0, len(arr))\n",
+    "Codec().serialize(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, int found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000003?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39mNone\u001b[39;00m,\u001b[39m2\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000003?line=1'>2</a>\u001b[0m \u001b[39m\"\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(a)\n",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, None,2]\n",
+    "\"\".join(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'None'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000004?line=0'>1</a>\u001b[0m \u001b[39mint\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mNone\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'None'"
+     ]
+    }
+   ],
+   "source": [
+    "int('None')"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "09a305af7256f75703d46e5b69b0bef344ee9fc0bd9bbe7457f5ea3749cf0e7d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('base')",
+   "display_name": "Python 3.9.13 ('ds_algo')",
    "language": "python",
    "name": "python3"
   },
@@ -96,9 +166,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d6e6534732b0cc6de321123fbc0e1bab54051c5ddbdc5cde537ca817e83f04c4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
