--- a/testing.ipynb
+++ b/testing.ipynb
@@ -12,147 +12,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to interrupt the Kernel. \n",
-      "No debugger available, can not send 'disconnect'. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "class TreeNode:\n",
-    "    def __init__(self, val):\n",
-    "        self.val = val\n",
-    "        self.left = None\n",
-    "        self.right = None\n",
-    "\n",
-    "# Function to insert nodes in level order\n",
-    "def insertLevelOrder(arr, i, n):\n",
-    "    root = None\n",
-    "    # Base case for recursion\n",
-    "    if i < n:\n",
-    "        root = TreeNode(arr[i]) if arr[i] != None else None\n",
-    "        if root == None:\n",
-    "            return root\n",
-    "        # insert left child\n",
-    "        root.left = insertLevelOrder(arr, 2 * i + 1, n)\n",
-    "        # insert right child\n",
-    "        root.right = insertLevelOrder(arr, 2 * i + 2, n)\n",
-    "    return root\n",
-    "\n",
-    "\n",
-    "class Codec:\n",
-    "\n",
-    "    def serialize(self, root):\n",
-    "        \"\"\"Encodes a tree to a single string.\n",
-    "        \n",
-    "        :type root: TreeNode\n",
-    "        :rtype: str\n",
-    "        \"\"\"\n",
-    "        output = []\n",
-    "        q = deque()\n",
-    "        q.append(root)\n",
-    "        while q:\n",
-    "            q_len = len(q)\n",
-    "            for i in range(q_len):\n",
-    "                node = q.popleft()\n",
-    "                if node != None:\n",
-    "                    output.append(str(node.val))\n",
-    "                else:\n",
-    "                    output.append(str(node))\n",
-    "                q.append(node.left if node else None)\n",
-    "                q.append(node.right if node else None)\n",
-    "        s = \",\".join(output)\n",
-    "        print(s)\n",
-    "        return s\n",
-    "        \n",
-    "    def buildTree(self, nodes, idx, length):\n",
-    "        root = None\n",
-    "        \n",
-    "        if idx < length:\n",
-    "            if nodes[idx] == \"None\":\n",
-    "                root = None\n",
-    "            else:\n",
-    "                root = TreeNode(int(nodes[idx]))\n",
+    "from collections import defaultdict\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def maxCoins(self, nums: List[int]) -> int:\n",
+    "        nums = [1] + nums + [1]\n",
+    "        L,R = 1, len(nums)-2\n",
+    "        dp = defaultdict(int)\n",
+    "        def dfs(l,r):\n",
+    "            if l>r:\n",
+    "                return 0\n",
+    "            if l==r:\n",
+    "                return nums[l-1]*nums[l]*nums[l+1]\n",
+    "            if (l,r) in dp:\n",
+    "                return dp[(l,r)]\n",
     "            \n",
-    "            if root == None:\n",
-    "                return root\n",
+    "            for i in range(l,r+1):\n",
+    "                dp[(l,r)]=max(dfs(l,i-1) + dfs(i,i) +dfs(i+1,r),dp[(l,r)])\n",
     "            \n",
-    "            root.left = self.buildTree(nodes,2*idx +1, length)\n",
-    "            root.right = self.buildTree(nodes, 2*idx +2, length)\n",
+    "            return dp[(l,r)]\n",
     "        \n",
-    "        return root\n",
-    "    \n",
-    "    def deserialize(self, data):\n",
-    "        \"\"\"Decodes your encoded data to tree.\n",
-    "        \n",
-    "        :type data: str\n",
-    "        :rtype: TreeNode\n",
-    "        \"\"\"\n",
-    "        nodes = data.split(\",\")\n",
-    "        return self.buildTree(nodes, 0, len(nodes))\n",
-    "        \n",
-    "null = None\n",
-    "arr = [1,2,3,null,null,4,5]\n",
-    "root = insertLevelOrder(arr, 0, len(arr))\n",
-    "Codec().serialize(root)"
+    "        return dfs(L,R)\n",
+    "            \n",
+    "            \n",
+    "\n",
+    "Solution().maxCoins(nums = [3,1,5,8])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, int found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000003?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39mNone\u001b[39;00m,\u001b[39m2\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000003?line=1'>2</a>\u001b[0m \u001b[39m\"\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(a)\n",
-      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = [1, None,2]\n",
-    "\"\".join(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'None'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000004?line=0'>1</a>\u001b[0m \u001b[39mint\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mNone\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'None'"
-     ]
-    }
-   ],
-   "source": [
-    "int('None')"
+    "a  = defaultdict(int)\n",
+    "a[4]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ds_algo')",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -166,12 +92,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d6e6534732b0cc6de321123fbc0e1bab54051c5ddbdc5cde537ca817e83f04c4"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
