--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,121 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from drawtree import draw_level_order\n",
-    "draw_level_order('[4,1,null,2,null,3]'.replace('null','#'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 6, 9, 8, 7, 4]"
+       "2"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
-    "from typing import List\n",
-    "class Solution:\n",
-    "    def spiralOrder(self, matrix: List[List[int]]) -> List[int]:\n",
-    "        TOP,BOTTOM,LEFT,RIGHT = 0,len(matrix)-1,0,len(matrix[0])-1\n",
-    "        res = []\n",
-    "        \n",
-    "        while LEFT<RIGHT and TOP<BOTTOM:\n",
-    "            for i in range(LEFT,RIGHT+1):\n",
-    "                res.append(matrix[TOP][i])\n",
-    "            TOP +=1\n",
-    "            \n",
-    "            for i in range(TOP,BOTTOM+1):\n",
-    "                res.append(matrix[i][RIGHT])\n",
-    "            RIGHT -=1\n",
-    "            \n",
-    "            for i in range(RIGHT,LEFT-1,-1):\n",
-    "                res.append(matrix[BOTTOM][i])\n",
-    "            BOTTOM -=1\n",
-    "            \n",
-    "            for i in range(BOTTOM,TOP-1,-1):\n",
-    "                res.append(matrix[i][LEFT])\n",
-    "            LEFT +=1\n",
-    "        return res\n",
+    "from bisect import bisect, bisect_left, bisect_right\n",
     "\n",
-    "Solution().spiralOrder([[1,2,3],[4,5,6],[7,8,9]])"
+    "\n",
+    "a = [9,11,15]\n",
+    "bisect(a,12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 2], [3, 10], [12, 16]]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from typing import List\n",
-    "class Solution:\n",
-    "    def insert(self, intervals: List[List[int]], newInterval: List[int]) -> List[List[int]]:\n",
-    "        res = []\n",
-    "        \n",
-    "        for i in range(len(intervals)):\n",
-    "            if newInterval[1] < intervals[i][0]:\n",
-    "                res.append(newInterval)\n",
-    "                return res + intervals[i:]\n",
-    "            elif newInterval[0] > intervals[i][1]:\n",
-    "                res.append(intervals[i])\n",
-    "            else:\n",
-    "                newInterval = [min(intervals[i][0],newInterval[0]),max(intervals[i][1],newInterval[1])]\n",
-    "        \n",
-    "        res.append(newInterval)\n",
-    "            \n",
-    "        return res\n",
-    "Solution().insert(intervals = [[1,2],[3,5],[6,7],[8,10],[12,16]], newInterval = [4,8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for ^: 'list' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashok-4983/GitHub/data_structures_and_algorithms_practice/testing.ipynb#ch0000005?line=0'>1</a>\u001b[0m [\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m3\u001b[39;49m] \u001b[39m^\u001b[39;49m[\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m3\u001b[39;49m]\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ^: 'list' and 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 1.12.1\n",
+      "Is MPS (Metal Performance Shader) built? True\n",
+      "Is MPS available? True\n",
+      "Using device: mps\n"
      ]
     }
    ],
    "source": [
-    "[0,1,3]^[0,1,2,3]"
+    "import torch\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sklearn\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "\n",
+    "# Check PyTorch has access to MPS (Metal Performance Shader, Apple's GPU architecture)\n",
+    "print(f\"Is MPS (Metal Performance Shader) built? {torch.backends.mps.is_built()}\")\n",
+    "print(f\"Is MPS available? {torch.backends.mps.is_available()}\")\n",
+    "\n",
+    "# Set the device      \n",
+    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4334, 0.3103, 0.2134, 0.7951],\n",
+      "        [0.1680, 0.5536, 0.4227, 0.5958],\n",
+      "        [0.4377, 0.4864, 0.1075, 0.5179]], device='mps:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create data and send it to the device\n",
+    "x = torch.rand(size=(3, 4)).to(device)\n",
+    "print(x)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.9.13 ('ds_algo')",
    "language": "python",
    "name": "python3"
   },
@@ -130,12 +96,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "d6e6534732b0cc6de321123fbc0e1bab54051c5ddbdc5cde537ca817e83f04c4"
    }
   }
  },
