--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,81 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from bisect import bisect, bisect_left, bisect_right\n",
-    "\n",
-    "\n",
-    "a = [9,11,15]\n",
-    "bisect(a,12)"
+    "from collections import defaultdict\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def increasingTriplet(self, nums: List[int]) -> bool:\n",
+    "        monotonic_stack = []\n",
+    "        nums_len = len(nums)\n",
+    "        for i, num in enumerate(nums):\n",
+    "            no_of_elements_left = nums_len - i\n",
+    "            while monotonic_stack and monotonic_stack[-1] >= num and len(monotonic_stack)-1 + no_of_elements_left >=3:\n",
+    "                monotonic_stack.pop()\n",
+    "            if not monotonic_stack or num > monotonic_stack[-1]:\n",
+    "                monotonic_stack.append(num)\n",
+    "            \n",
+    "            if len(monotonic_stack) == 3:\n",
+    "                return True\n",
+    "        return False\n",
+    "Solution().increasingTriplet([20,100,10,12,5,13])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyTorch version: 1.12.1\n",
-      "Is MPS (Metal Performance Shader) built? True\n",
-      "Is MPS available? True\n",
-      "Using device: mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sklearn\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Definition for a binary tree node.\n",
+    "class TreeNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
     "\n",
-    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "def insertLevelOrder(arr, i, n):\n",
+    "\troot = None\n",
+    "\tif i < n:\n",
+    "\t\troot = TreeNode(arr[i])\n",
+    "\t\troot.left = insertLevelOrder(arr, 2 * i + 1, n)\n",
+    "\t\troot.right = insertLevelOrder(arr, 2 * i + 2, n)\n",
+    "\treturn root\n",
     "\n",
-    "# Check PyTorch has access to MPS (Metal Performance Shader, Apple's GPU architecture)\n",
-    "print(f\"Is MPS (Metal Performance Shader) built? {torch.backends.mps.is_built()}\")\n",
-    "print(f\"Is MPS available? {torch.backends.mps.is_available()}\")\n",
-    "\n",
-    "# Set the device      \n",
-    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
-    "print(f\"Using device: {device}\")"
+    "null = None\n",
+    "arr = [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4]\n",
+    "n = len(arr)\n",
+    "root = insertLevelOrder(arr, 0, n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.4334, 0.3103, 0.2134, 0.7951],\n",
-      "        [0.1680, 0.5536, 0.4227, 0.5958],\n",
-      "        [0.4377, 0.4864, 0.1075, 0.5179]], device='mps:0')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create data and send it to the device\n",
-    "x = torch.rand(size=(3, 4)).to(device)\n",
-    "print(x)"
+    "class Solution:\n",
+    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "        ans = None \n",
+    "        def postOrder(node):\n",
+    "            nonlocal ans\n",
+    "            if not node or ans:\n",
+    "                return False, False\n",
+    "            \n",
+    "            lsub_found_p, lsub_found_q = postOrder(node.left)\n",
+    "            rsub_found_p, rsub_found_q = postOrder(node.right)\n",
+    "            \n",
+    "            found_p, found_q = False, False\n",
+    "            if node.val == p.val:\n",
+    "                found_p = True\n",
+    "            elif node.val == q.val:\n",
+    "                found_q = True\n",
+    "            \n",
+    "            if (lsub_found_p or rsub_found_p or found_p) and (lsub_found_q or rsub_found_q or found_q) and not ans:\n",
+    "                ans = node\n",
+    "\n",
+    "            return (lsub_found_p or rsub_found_p or found_p), (lsub_found_q or rsub_found_q or found_q)\n",
+    "        \n",
+    "        postOrder(root)\n",
+    "        return ans\n",
+    "            \n",
+    "ans = Solution().lowestCommonAncestor(root,TreeNode(5),TreeNode(6))\n",
+    "ans.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.randint(0,1)"
    ]
   }
  ],
