--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,47 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import defaultdict\n",
-    "from typing import List\n",
-    "class Solution:\n",
-    "    def increasingTriplet(self, nums: List[int]) -> bool:\n",
-    "        monotonic_stack = []\n",
-    "        nums_len = len(nums)\n",
-    "        for i, num in enumerate(nums):\n",
-    "            no_of_elements_left = nums_len - i\n",
-    "            while monotonic_stack and monotonic_stack[-1] >= num and len(monotonic_stack)-1 + no_of_elements_left >=3:\n",
-    "                monotonic_stack.pop()\n",
-    "            if not monotonic_stack or num > monotonic_stack[-1]:\n",
-    "                monotonic_stack.append(num)\n",
-    "            \n",
-    "            if len(monotonic_stack) == 3:\n",
-    "                return True\n",
-    "        return False\n",
-    "Solution().increasingTriplet([20,100,10,12,5,13])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
+    "# from binarytree import Node\n",
     "class TreeNode:\n",
     "    def __init__(self, x):\n",
     "        self.val = x\n",
@@ -51,89 +16,139 @@
     "\n",
     "def insertLevelOrder(arr, i, n):\n",
     "\troot = None\n",
-    "\tif i < n:\n",
+    "\tif i < n and arr[i] is not None:\n",
     "\t\troot = TreeNode(arr[i])\n",
-    "\t\troot.left = insertLevelOrder(arr, 2 * i + 1, n)\n",
-    "\t\troot.right = insertLevelOrder(arr, 2 * i + 2, n)\n",
+    "\t\tl = insertLevelOrder(arr, 2 * i + 1, n)\n",
+    "\t\tr = insertLevelOrder(arr, 2 * i + 2, n)\n",
+    "\t\troot.left = l if l and l.val != None else None\n",
+    "\t\troot.right = r if r and r.val != None else None\n",
     "\treturn root\n",
     "\n",
     "null = None\n",
-    "arr = [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4]\n",
+    "arr = [1,3,2,5,null,null,9,6,null,7]\n",
     "n = len(arr)\n",
     "root = insertLevelOrder(arr, 0, n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  3___\n",
+      " /    \\\n",
+      "9     _20\n",
+      "     /   \\\n",
+      "    15    7\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "class Solution:\n",
-    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
-    "        ans = None \n",
-    "        def postOrder(node):\n",
-    "            nonlocal ans\n",
-    "            if not node or ans:\n",
-    "                return False, False\n",
-    "            \n",
-    "            lsub_found_p, lsub_found_q = postOrder(node.left)\n",
-    "            rsub_found_p, rsub_found_q = postOrder(node.right)\n",
-    "            \n",
-    "            found_p, found_q = False, False\n",
-    "            if node.val == p.val:\n",
-    "                found_p = True\n",
-    "            elif node.val == q.val:\n",
-    "                found_q = True\n",
-    "            \n",
-    "            if (lsub_found_p or rsub_found_p or found_p) and (lsub_found_q or rsub_found_q or found_q) and not ans:\n",
-    "                ans = node\n",
+    "from typing import List, Optional\n",
+    "from binarytree import Node\n",
     "\n",
-    "            return (lsub_found_p or rsub_found_p or found_p), (lsub_found_q or rsub_found_q or found_q)\n",
+    "class Solution:\n",
+    "    def buildTree(self, inorder: List[int], postorder: List[int]) -> Optional[TreeNode]:\n",
     "        \n",
-    "        postOrder(root)\n",
-    "        return ans\n",
+    "        def dfs(inorder, postorder):\n",
+    "            if not inorder:\n",
+    "                return None\n",
     "            \n",
-    "ans = Solution().lowestCommonAncestor(root,TreeNode(5),TreeNode(6))\n",
-    "ans.val"
+    "            inorder_val_vs_idx = {v:i for i,v in enumerate(inorder)}\n",
+    "            val = postorder.pop()\n",
+    "            node = Node(val)\n",
+    "            m = inorder_val_vs_idx[val]\n",
+    "            right_sub_tree = inorder[m+1:]\n",
+    "            node.right = dfs(right_sub_tree, postorder)\n",
+    "            left_sub_tree = inorder[:m]\n",
+    "            node.left = dfs(left_sub_tree, postorder)\n",
+    "            return node\n",
+    "        \n",
+    "        return dfs(inorder, postorder)\n",
+    "res = Solution().buildTree(inorder = [9,3,15,20,7], postorder = [9,15,7,20,3])\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "14"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
-    "random.randint(0,1)"
+    "from typing import List\n",
+    "import heapq\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "class UnionFind:\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.parent = {i:i for i in range(n)}\n",
+    "        self.rank = [1]*n\n",
+    "    \n",
+    "    def find(self, node):\n",
+    "        if self.parent[node] != node:\n",
+    "            self.parent[node] = self.find(self.parent[node])\n",
+    "        return self.parent[node]\n",
+    "\n",
+    "    def union(self, n1, n2):\n",
+    "        par1 = self.find(n1)\n",
+    "        par2 = self.find(n2)\n",
+    "\n",
+    "        if par1 == par2:\n",
+    "            return\n",
+    "        \n",
+    "        if self.rank[par1] >= self.rank[par2]:\n",
+    "            self.parent[par2] = par1\n",
+    "            self.rank[par1] += self.rank[par2]\n",
+    "        else:\n",
+    "            self.parent[par1] = par2\n",
+    "            self.rank[par2] += self.rank[par1]\n",
+    "\n",
+    "class Solution:\n",
+    "    def countPairs(self, n: int, edges: List[List[int]]) -> int:\n",
+    "        uf = UnionFind(n)\n",
+    "\n",
+    "        for u,v in edges:\n",
+    "            uf.union(u,v)\n",
+    "        \n",
+    "        groups = defaultdict(list)\n",
+    "        for i in range(n):\n",
+    "            par_i = uf.find(i)\n",
+    "            heapq.heappush(groups[par_i],i)\n",
+    "        \n",
+    "        ans = 0\n",
+    "        for i, heap_i in groups.items():\n",
+    "            while heap_i:\n",
+    "                val = heapq.heappop(heap_i)\n",
+    "                rhs_nums = n - val - 1\n",
+    "                rhs_nums = rhs_nums - len(heap_i)\n",
+    "                ans += rhs_nums\n",
+    "        return ans\n",
+    "                \n",
+    "Solution().countPairs(n = 7, edges = [[0,2],[0,5],[2,4],[1,6],[5,4]])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ds_algo')",
+   "display_name": "ds_algo",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
